# MKCompress

./: .gitignore  CFileDialog.cpp  CFileDialog.h  CMakeLists.txt  MKCTExtend.cpp  MKCTExtend.h  MKCompress.cpp  MKCompress.h  MKCompress.qrc  MKCompress.rc  MKCompress.sln  MKCompress.ui  MKCompress.vcxproj  MKCompress.vcxproj.filters  MixFileChooser.cpp  MixFileChooser.h  README.MD  cpp.hint  extron.mkc  main.cpp  mkcompress_en.ts  stdafx.h  ts.mkc
include/: MKCTDLL.h  MKCTDLL.hpp
lib/: MKCT.lib
src/: FileDialog.cpp  FileDialog.h  MKCompress.cpp  MKCompress.h  main.cpp
